force-app/main/default/objects/NCMT_LEED_Checklist__c/NCMT_LEED_Checklist__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <description>LEED Checklist</description>
    <label>LEED Checklist</label>
    <nameField>
        <displayFormat>LEED-{0000}</displayFormat>
        <label>NCMT LEED Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LEED Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>