force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/Building_Quality__c.field-meta.xml
<CustomField>
    <fullName>Building_Quality__c</fullName>
    <description>Building Quality from NCMT Project</description>
    <formula>Text(Project__r.Building_Quality__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Quality</label>
    <type>Text</type>
</CustomField>