force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_EA_1__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_EA_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Energy and Atmosphere - Enhanced Commissioning</description>
    <inlineHelpText>Enhanced Commissioning 
Max: 6 | Federal Mandate: 3 | P100: 3 | Customary: 0 | 
Class A: 3 | Total: 6</inlineHelpText>
    <label>Enhanced Commissioning</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>