force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_EA_2__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_EA_2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Energy and Atmosphere - Optimize Energy Performance</description>
    <inlineHelpText>Optimize Energy Performance 
Max: 18 | Federal Mandate: 12 | P100: 0 | Customary: 0 | 
Class A: 6 | Total: 12</inlineHelpText>
    <label>Optimize Energy Performance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>