force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_EA_3__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_EA_3__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Energy and Atmosphere - Advanced Energy Metering</description>
    <inlineHelpText>Advanced Energy Metering
Max: 1 | Federal Mandate: 1 | P100: 0 | Customary: 0 | 
Class A: 0 | Total: 1</inlineHelpText>
    <label>Advanced Energy Metering</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>