force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_IEQ_1__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_IEQ_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indoor Environmental Quality - Enhanced Indoor Air Quality Strategies</description>
    <inlineHelpText>Enhanced Indoor Air Quality Strategies 
Max: 2 | Federal Mandate: 0 | P100: 0 | Customary: 1 | 
Class A: 1 | Total: 1</inlineHelpText>
    <label>Enhanced Indoor Air Quality Strategies</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>