force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_IEQ_2__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_IEQ_2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indoor Environmental Quality - Low-Emitting Materials</description>
    <inlineHelpText>Low-Emitting Materials 
Max: 3 | Federal Mandate: 2 | P100: 0 | Customary: 1 | 
Class A: 3 | Total: 3</inlineHelpText>
    <label>Low-Emitting Materials</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>