force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_IEQ_3__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_IEQ_3__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indoor Environmental Quality - Construction Indoor Air Quality Management Plan</description>
    <inlineHelpText>Construction Indoor Air Quality Management Plan 
Max: 1 | Federal Mandate: 0 | P100: 1 | Customary: 0 | 
Class A: 1 | Total: 1</inlineHelpText>
    <label>Const Indoor Air Quality Mgmt Plan</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>