force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_Innovation_2__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_Innovation_2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Innovation - LEED Accredited Professional</description>
    <inlineHelpText>LEED Accredited Professional 
Max: 1 | Federal Mandate: 0 | P100: 0 | Customary: 1 | 
Class A: 1 | Total: 1</inlineHelpText>
    <label>LEED Accredited Professional</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>