force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_IP_1__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_IP_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Integrative Process - Integrative Process</description>
    <inlineHelpText>Integrative Process 
Max: 1 | Federal Mandate: 0 | P100: 1 | Customary: 0 | 
Class A: 0 | Total: 1</inlineHelpText>
    <label>Integrative Process</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>