force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_LT_7__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_LT_7__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Location and Transportation - Reduced Parking Footprint</description>
    <inlineHelpText>Reduced Parking Footprint 
Max: 1 | Federal Mandate: 0 | P100: 0 | Customary: 1 | 
Class A: 0 | Total: 1</inlineHelpText>
    <label>Reduced Parking Footprint</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>