force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_LT_8__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_LT_8__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Location and Transportation - Green Vehicles</description>
    <inlineHelpText>Green Vehicles 
Max: 1 | Federal Mandate: 0 | P100: 0 | Customary: 0 | 
Class A: 0 | Total: 0</inlineHelpText>
    <label>Green Vehicles</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>