force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_MR_1__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_MR_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Materials and Resources - Building Life-Cycle Impact Reduction</description>
    <inlineHelpText>Building Life-Cycle Impact Reduction 
Max: 5 | Federal Mandate: 0 | P100: 0 | Customary: 3 | 
Class A: 0 | Total: 3</inlineHelpText>
    <label>Building Life-Cycle Impact Reduction</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>