force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_MR_2__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_MR_2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Materials and Resources - Building Product Disclosure and Optimization - Environmental Product Declarations</description>
    <inlineHelpText>Building Product Disclosure and Optimization - Environmental Product  Declarations 
Max: 2 | Federal Mandate: 0 | P100: 0 | Customary: 1 | 
Class A: 0 | Total: 1</inlineHelpText>
    <label>BPDO - Environmental Prod Declarations</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>