force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_RP_1__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_RP_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Regional Priority - Regional Priority: Specific Credit</description>
    <inlineHelpText>Regional Priority: Specific Credit 
Max: 4 | Federal Mandate: 0 | P100: 0 | Customary: 4 | 
Class A: 2 | Total: 4</inlineHelpText>
    <label>Regional Priority: Specific Credit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>