force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_SS_4__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_SS_4__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sustainable Sites - Rainwater Management</description>
    <inlineHelpText>Rainwater Management 
Max: 3 | Federal Mandate: 2 | P100: 0 | Customary: 0 | 
Class A: 0 | Total: 2</inlineHelpText>
    <label>Rainwater Management</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>