force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/LEED_USR_Mod_WE_1__c.field-meta.xml
<CustomField>
    <fullName>LEED_USR_Mod_WE_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Water Efficiency - Outdoor Water Use Reduction</description>
    <inlineHelpText>Outdoor Water Use Reduction 
Max: 2 | Federal Mandate: 1 | P100: 0 | Customary: 0 | 
Class A: 1 | Total: 1</inlineHelpText>
    <label>Outdoor Water Use Reduction</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>