force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/Prerequisite_10__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_10__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Materials and Resources - Construction and Demolition Waste Management Planning</description>
    <inlineHelpText>Construction and Demolition Waste Management Planning</inlineHelpText>
    <label>Construction &amp; Demolition Waste Mgmt</label>
    <type>Checkbox</type>
</CustomField>