force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/Prerequisite_12__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_12__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indoor Environmental Quality - Environmental Tobacco Smoke Control</description>
    <inlineHelpText>Environmental Tobacco Smoke Control</inlineHelpText>
    <label>Environmental Tobacco Smoke Control</label>
    <type>Checkbox</type>
</CustomField>