force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/Prerequisite_1__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Construction Activity Pollution Prevention</description>
    <inlineHelpText>Construction Activity Pollution Prevention</inlineHelpText>
    <label>Const Activity Pollution Prevention</label>
    <type>Checkbox</type>
</CustomField>