force-app/main/default/objects/NCMT_LEED_Checklist__c/fields/Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID__c</fullName>
    <formula>RecordType.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type ID</label>
    <type>Text</type>
</CustomField>