force-app/main/default/objects/NCMT_LEED_Checklist__c/recordTypes/LEED_Checklist.recordType-meta.xml
<RecordType>
    <fullName>LEED_Checklist</fullName>
    <active>true</active>
    <description>Leed Checklist</description>
    <label>LEED Checklist</label>
</RecordType>