force-app/main/default/objects/NCMT_LEED_Checklist__c/recordTypes/LEED_Prerequisite.recordType-meta.xml
<RecordType>
    <fullName>LEED_Prerequisite</fullName>
    <active>true</active>
    <description>LEED Prerequisite</description>
    <label>LEED Prerequisite</label>
</RecordType>