force-app/main/default/objects/NCMT_LEED_Checklist__c/validationRules/LEED_USR_Mod_EA_Point_Chk_1.validationRule-meta.xml
<ValidationRule>
    <fullName>LEED_USR_Mod_EA_Point_Chk_1</fullName>
    <active>true</active>
    <description>Energy and Atmosphere - Enhanced Commissioning - Point Check</description>
    <errorConditionFormula>NOT( LEED_USR_Mod_EA_1__c = 0 || LEED_USR_Mod_EA_1__c  = 3 || LEED_USR_Mod_EA_1__c  = 4 || LEED_USR_Mod_EA_1__c  = 6 )</errorConditionFormula>
    <errorDisplayField>LEED_USR_Mod_EA_1__c</errorDisplayField>
    <errorMessage>This field&apos;s value is outside of the acceptable range.  Please adjust to a value of 0, 3, 4, or 6.</errorMessage>
</ValidationRule>