force-app/main/default/objects/NCMT_LEED_Checklist__c/validationRules/LEED_USR_Mod_EA_Point_Chk_2.validationRule-meta.xml
<ValidationRule>
    <fullName>LEED_USR_Mod_EA_Point_Chk_2</fullName>
    <active>true</active>
    <description>Energy and Atmosphere - Optimize Energy Performance - Point Check</description>
    <errorConditionFormula>NOT( LEED_USR_Mod_EA_2__c = 0 || LEED_USR_Mod_EA_2__c  = 1 || LEED_USR_Mod_EA_2__c  = 2 || LEED_USR_Mod_EA_2__c  = 3 || LEED_USR_Mod_EA_2__c  = 4 || LEED_USR_Mod_EA_2__c  = 5 || LEED_USR_Mod_EA_2__c  = 6 || LEED_USR_Mod_EA_2__c  = 7 || LEED_USR_Mod_EA_2__c  = 8 || LEED_USR_Mod_EA_2__c  = 9 || LEED_USR_Mod_EA_2__c  = 10 || LEED_USR_Mod_EA_2__c  = 11 || LEED_USR_Mod_EA_2__c  = 12 || LEED_USR_Mod_EA_2__c  = 13 || LEED_USR_Mod_EA_2__c  = 14 || LEED_USR_Mod_EA_2__c  = 15 || LEED_USR_Mod_EA_2__c  = 16 || LEED_USR_Mod_EA_2__c  = 17 || LEED_USR_Mod_EA_2__c  = 18 )</errorConditionFormula>
    <errorDisplayField>LEED_USR_Mod_EA_2__c</errorDisplayField>
    <errorMessage>This field&apos;s value is outside of the acceptable range.  Please adjust to a value of 0 through 18.</errorMessage>
</ValidationRule>