force-app/main/default/objects/NCMT_LEED_Checklist__c/validationRules/LEED_USR_Mod_EA_Point_Chk_5.validationRule-meta.xml
<ValidationRule>
    <fullName>LEED_USR_Mod_EA_Point_Chk_5</fullName>
    <active>true</active>
    <description>Energy and Atmosphere - Renewable Energy Production - Point Check</description>
    <errorConditionFormula>NOT( LEED_USR_Mod_EA_5__c = 0 || LEED_USR_Mod_EA_5__c  = 1 || LEED_USR_Mod_EA_5__c  = 2 || LEED_USR_Mod_EA_5__c  = 3 )</errorConditionFormula>
    <errorDisplayField>LEED_USR_Mod_EA_5__c</errorDisplayField>
    <errorMessage>This field&apos;s value is outside of the acceptable range.  Please adjust to a value of 0, 1, 2, or 3.</errorMessage>
</ValidationRule>