force-app/main/default/objects/NCMT_LEED_Checklist__c/validationRules/LEED_USR_Mod_EA_Point_Chk_7.validationRule-meta.xml
<ValidationRule>
    <fullName>LEED_USR_Mod_EA_Point_Chk_7</fullName>
    <active>true</active>
    <description>Energy and Atmosphere - Green Power and Carbon Offsets - Point Check</description>
    <errorConditionFormula>NOT( LEED_USR_Mod_EA_7__c = 0 || LEED_USR_Mod_EA_7__c  = 1 || LEED_USR_Mod_EA_7__c  = 2 )</errorConditionFormula>
    <errorDisplayField>LEED_USR_Mod_EA_7__c</errorDisplayField>
    <errorMessage>This field&apos;s value is outside of the acceptable range.  Please adjust to a value of 0, 1, or 2.</errorMessage>
</ValidationRule>