force-app/main/default/objects/NCMT_LEED_Checklist__c/validationRules/LEED_USR_Mod_IP_Point_Chk_1.validationRule-meta.xml
<ValidationRule>
    <fullName>LEED_USR_Mod_IP_Point_Chk_1</fullName>
    <active>true</active>
    <description>Integrative Process - Integrative Process - Point Check</description>
    <errorConditionFormula>NOT( LEED_USR_Mod_IP_1__c = 0 || LEED_USR_Mod_IP_1__c  = 1 )</errorConditionFormula>
    <errorDisplayField>LEED_USR_Mod_IP_1__c</errorDisplayField>
    <errorMessage>This field&apos;s value is outside of the acceptable range.  Please adjust to a value of 0 or 1.</errorMessage>
</ValidationRule>