force-app/main/default/objects/NCMT_LEED_Checklist__c/validationRules/LEED_USR_Mod_MR_Point_Chk_1.validationRule-meta.xml
<ValidationRule>
    <fullName>LEED_USR_Mod_MR_Point_Chk_1</fullName>
    <active>true</active>
    <description>Materials and Resources - Building Life-Cycle Impact Reduction - Point Check</description>
    <errorConditionFormula>NOT( LEED_USR_Mod_MR_1__c = 0 || LEED_USR_Mod_MR_1__c  = 3 || LEED_USR_Mod_MR_1__c  = 5 )</errorConditionFormula>
    <errorDisplayField>LEED_USR_Mod_MR_1__c</errorDisplayField>
    <errorMessage>This field&apos;s value is outside of the acceptable range.  Please adjust to a value of 0, 3, or 5.</errorMessage>
</ValidationRule>