force-app/main/default/objects/NCMT_LEED_Checklist__c/validationRules/LEED_USR_Mod_MR_Point_Chk_3.validationRule-meta.xml
<ValidationRule>
    <fullName>LEED_USR_Mod_MR_Point_Chk_3</fullName>
    <active>true</active>
    <description>Materials and Resources - Building Product Disclosure and Optimization - Sourcing of Raw Materials - Point Check</description>
    <errorConditionFormula>NOT( LEED_USR_Mod_MR_3__c = 0 || LEED_USR_Mod_MR_3__c  = 1 || LEED_USR_Mod_MR_3__c  = 2 )</errorConditionFormula>
    <errorDisplayField>LEED_USR_Mod_MR_3__c</errorDisplayField>
    <errorMessage>This field&apos;s value is outside of the acceptable range.  Please adjust to a value of 0, 1, or 2.</errorMessage>
</ValidationRule>